2020-11-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Add 15-bit mode to `gblblit'.

	No target depths left for legacy `grblit' except mono, pal4, pal8.

	* graph/gblblit.[ch]: Set up rgb555 target mode (instead of bgr565).

2020-10-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_surface_done): Free the bitmap here...
	* src/ftcommon.c (FTDemo_Display_Done): ... rather than here.

2020-10-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Fix PNG dump from 32-bit display.

	* src/ftcommon.c (FTDemo_Display_Print): The 32-bit mode needs
	transformations to account for endianness and skip the top byte.

2020-10-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/win32/grwin32.c (gr_win32_surface_init): Default to BITSPIXEL.

2020-10-27  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Let the driver set convenient depth.

	Let the driver change `gr_pixel_mode_none' to whatever depth is
	convenient and make that the default.  You can still force an
	alternative depth from the command line.

	* graph/batch/grbatch.c (gr_batch_surface_init): Default to rgb24.
	* graph/win32/grwin32.c (gr_win32_surface_init): Default to rgb32.
	* graph/x11/grx11.c (gr_x11_surface_init): Match the visual depth.

	* graph/graph.h (grNewSurface): Document `gr_pixel_mode_none' request.
	* src/ftcommon.c (FTDemo_Display_New): Use `gr_pixel_mode_none'.

2020-10-27  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Zero-copy 15/16/32-bit modes.

	We opportunistically rely on XPutImage that can perform minimal
	conversions if ZPixmap matches depth and bits_per_pixel.  We check if
	the requested 15/16/32-bit mode matches the visual format and send
	the data as is.

	* graph/x11/grx11.c (gr_x11_surface_init): Handle 15/16/32-bit modes.
	(gr_x11_surface_resize): Ditto.
	(gr_x11_surface_done): Unlink the data before `XDestroyImage'.
	(gr_x11_surface_refresh_rect): Check if conversion is requested.
